--- a/Category_Theory/cd/cd-1.tex
+++ b/Category_Theory/cd/cd-1.tex
@@ -6,7 +6,7 @@
 \begin{center}
     \begin{tikzcd} 
         M \arrow[d, "s"] \arrow[dr, phantom, "\circlearrowright"] & M_s\underset{C}{\times_t}M \arrow[l, "P_2" '] \arrow[r, "P_1"] \arrow[d, "c"] & M \arrow[dl, phantom, "\circlearrowright"] \arrow[d, "t"] \\
-        C & M \arrow[l, "s"] \arrow[r, "t"] & C
+        C & M \arrow[l, "s"] \arrow[r, "t"'] & C
     \end{tikzcd}
 \end{center}
 
