--- a/Category_Theory/cd/cd-9.tex
+++ b/Category_Theory/cd/cd-9.tex
@@ -4,8 +4,8 @@
 \begin{document}
 
 \begin{center} \begin{tikzcd}
-    M_s\underset{C}{\times_t}M \ar[r,"c"] \ar[d,"F_M\times F_M \circ \omega"' red] & M \ar[dl, phantom, "\circlearrowright"] \ar[d,"F_M"] \\
-    M'_{s'}\underset{C'}{\times_{t'}}M' \ar[r,"c'"'] & M'
+    M_s\underset{C}{\times}{}_tM \ar[r,"c"] \ar[d,"F_M\times F_M \circ \omega"' red] & M \ar[dl, phantom, "\circlearrowright"] \ar[d,"F_M"] \\
+    M'_{s'}\underset{C'}{\times}{}_{t'}M' \ar[r,"c'"'] & M'
 \end{tikzcd} \end{center}
 
 \end{document}
